--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-  <head>This is reservated to a site.</head>
+  <head>This is reservated to a site for a hobby programmer team (website to be changed)</head>
 </html>
